# quickjs

./: .gitignore  CMakeLists.txt  build.bat  build_cmake.bat  cutils.c  cutils.h  libregexp.c  qjs.c  qjsc.c  quickjs-atom.h  quickjs-libc.c  quickjs.c  quickjs.h  xmake.lua
tests/: test_bjson.js
